--- a/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
@@ -25,11 +25,11 @@
 #
 # Note Z style messages (e.g. AGDTCZ00001) are included here for documentary purposes only.
 #
-AGJESZ00001=AGJESZ00001:DatasetAgent: Could not read my configuration file {0}
-AGJESZ00002=AGJESZ00002:DatasetAgent: Not initialized. Perhaps my configuration file is missing.
-AGJESZ00003=AGJESZ00003:Message: Message key is null.
-AGJESZ00004=AGJESZ00004:Message: Message pattern or inserts are invalid
-AGJESZ00005=AGJESZ00005:Message: Message not found in ResourceBundle
+AGDTCZ00001=AGJESZ00001:DatasetAgent: Could not read my configuration file {0}
+AGDTCZ00002=AGJESZ00002:DatasetAgent: Not initialized. Perhaps my configuration file is missing.
+AGDTCZ00003=AGJESZ00003:Message: Message key is null.
+AGDTCZ00004=AGJESZ00004:Message: Message pattern or inserts are invalid
+AGDTCZ00005=AGJESZ00005:Message: Message not found in ResourceBundle
 
 AGDTCE00030=:DatasetAgent: Failed to parse Job Request.
 AGDTCE00040=:DatasetAgent: Query ultimately failed. See previous messages.
