--- a/astrogrid/portalB/build.xml
+++ b/astrogrid/portalB/build.xml
@@ -2,10 +2,13 @@
 <!--+
     | <cvs:source>$Source: /Users/pharriso/Work/ag/repo/git/astrogrid-mirror/astrogrid/portalB/Attic/build.xml,v $</cvs:source>
     | <cvs:date>$Author: dave $</cvs:date>
-    | <cvs:author>$Date: 2003/06/18 12:05:43 $</cvs:author>
-    | <cvs:version>$Revision: 1.6 $</cvs:version>
+    | <cvs:author>$Date: 2003/06/18 13:08:39 $</cvs:author>
+    | <cvs:version>$Revision: 1.7 $</cvs:version>
     | <cvs:log>
     | $Log: build.xml,v $
+    | Revision 1.7  2003/06/18 13:08:39  dave
+    | Changed MySpace service URL
+    |
     | Revision 1.6  2003/06/18 12:05:43  dave
     | Added debug and response status
     |
@@ -84,7 +87,7 @@
 	<property name="myspace.hydra"  value="http://143.210.36.120:8080"/>
 	<property name="myspace.qin"    value="http://143.210.36.131:8080"/>
 	<property name="myspace.local"  value="http://localhost:8080"/>
-	<property name="myspace.server" value="${myspace.qin}"/>
+	<property name="myspace.server" value="${myspace.hydra}"/>
 
 	<!-- JAF properties -->
 	<property name="jaf.src"   value="depends/jaf/jaf-1.0.2.zip"/>
