--- a/astrogrid/portalB/src/site/WEB-INF/web.xml
+++ b/astrogrid/portalB/src/site/WEB-INF/web.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <!--+
     | <cvs:source>$Source: /Users/pharriso/Work/ag/repo/git/astrogrid-mirror/astrogrid/portalB/src/site/WEB-INF/Attic/web.xml,v $</cvs:source>
-    | <cvs:date>$Author: KevinBenson $</cvs:date>
-    | <cvs:author>$Date: 2003/06/17 08:49:46 $</cvs:author>
-    | <cvs:version>$Revision: 1.2 $</cvs:version>
+    | <cvs:date>$Author: tjg $</cvs:date>
+    | <cvs:author>$Date: 2003/06/18 15:04:22 $</cvs:author>
+    | <cvs:version>$Revision: 1.3 $</cvs:version>
     | <cvs:log>
     | $Log: web.xml,v $
-    | Revision 1.2  2003/06/17 08:49:46  KevinBenson
-    | new jsp page and web.xml for installing DataQuery
+    | Revision 1.3  2003/06/18 15:04:22  tjg
+    | add registry entries
     |
     | Revision 1.1  2003/06/12 18:19:38  dave
     | Initial import into cvs ...
@@ -28,15 +28,27 @@
 <web-app>
 
 <servlet>
-	<servlet-name>DataQuery</servlet-name>
+        <servlet-name>DataQuery</servlet-name>
+        <servlet-class>
+                org.astrogrid.portal.query.DataQueryServlet
+        </servlet-class>
+</servlet>
+
+<servlet>
+	<servlet-name>Registry</servlet-name>
 	<servlet-class>
-		org.astrogrid.portal.query.DataQueryServlet
+		org.astrogrid.portal.registry.RegistryServlet
 	</servlet-class>
 </servlet>
 
 <servlet-mapping>
-	<servlet-name>DataQuery</servlet-name>
-	<url-pattern>/DataQuery</url-pattern>
+        <servlet-name>DataQuery</servlet-name>
+        <url-pattern>/DataQuery</url-pattern>
+</servlet-mapping>
+
+<servlet-mapping>
+	<servlet-name>Registry</servlet-name>
+	<url-pattern>/Registry</url-pattern>
 </servlet-mapping>
 
 </web-app>
