*** empty log message ***

--- a/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
@@ -61,7 +61,7 @@ AGDTCE00200=:From: Could not create From from element.
 AGDTCE00210=:From: Could not create SQL for From.
 
 AGDTCE00220=:Criteria: Could not create Criteria element.
-AGDTCE00230=:Criteria: Could not create SQL for Criteria.
+AGDTCE00230=:Criteria: Could not create SQL for Criteria - unsupported or ill-targeted operation "{0}".
 
 AGDTCE00240=:Return: Could not create Return element.
 AGDTCE00250=:Return: Could not create SQL for Return.
