*** empty log message ***

--- a/astrogrid/jes/config/ASTROGRID_jesconfig.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesconfig.properties
@@ -87,12 +87,7 @@ SCHEDULER.URL=http://hydra.star.le.ac.uk:8080/axis/services/JobSchedulerService
 #
 SCHEDULE_JOB_REQUEST.TEMPLATE= \
 <?xml version='1.0' encoding='UTF8'?> \
-<job name='{0}'> \
-   <userid>{1}</userid> \
-   <community>{2}</community> \
-   <time>{3}</time> \
-   <jobid>{4}</jobid> \
-</job>
+<job name="{0}" userid="{1}" community="{2}" time="{3}" jobURN="{4}" />
 
 #
 # Location of our JobMonitor
