*** empty log message ***

--- a/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
@@ -65,7 +65,7 @@ PARSER.VALIDATION=false
 # <catalog-name>.<partial-key>=<value>
 #
 USNOB.QUERYFACTORY=org.astrogrid.datacenter.impl.QueryFactoryImpl
-USNOB.DATASOURCE=java:comp/env/jdbc/usnob
+USNOB.DATASOURCE=java:comp/env/jdbc/usnob-datasource
 
 #
 # Factory for creating VOTables. At present only one is supported.
@@ -80,7 +80,7 @@ VOTABLEFACTORY=org.astrogrid.datacenter.impl.VOTableFactoryImpl
 # for co-operating with the MySpace facility. However, here is how
 # the astrogrid implementation is loaded...
 #
-MYSPACE.FACTORY=org.astrogrid.datacenter.impl.MySpaceFactoryImpl
+MYSPACE.FACTORY_KEY=org.astrogrid.datacenter.impl.MySpaceFactoryImpl
 
 #
 # Local directory where temporary files associated with the MySpace facility 
@@ -115,7 +115,7 @@ MYSPACE.MANAGER.REQUEST_TEMPLATE= \
 # The job database is probably a temporary requirement.
 #
 JOB.FACTORY=org.astrogrid.datacenter.impl.JobFactoryImpl
-JOB.DATASOURCE=java:comp/env/jdbc/job
+JOB.DATASOURCE=java:comp/env/jdbc/job-datasource
 JOB.TABLENAME=JOB
 
 
@@ -130,7 +130,7 @@ JOB.MONITOR.REQUEST_TEMPLATE= \
 
 
 #
-# Catalog specific UCD to Column Headings mappings go here. The format is:
+# Datacenter specific UCD to Column Headings mappings go here. The format is:
 # <catalog-name>.<table-name>.<UCD>=<value>
 #
 USNOB.USNOB.POS_EQ_RA=URA
