--- a/astrogrid/jes/config/ASTROGRID_jesconfig.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesconfig.properties
@@ -66,7 +66,7 @@ SERVICE.TABLENAME=SERVICE
 # Submit Job Response Template
 #
 SUBMIT_JOB_RESPONSE.TEMPLATE= \
-<?xml version='1.0' encoding='UTF8'?> \
+<?xml version="1.0" encoding="UTF8"?> \
 <response> \
    <job> \
 	  <userid>{0}</userid> \
@@ -86,7 +86,7 @@ SCHEDULER.URL=http://hydra.star.le.ac.uk:8080/axis/services/JobSchedulerService
 # Schedule Job Request Template
 #
 SCHEDULE_JOB_REQUEST.TEMPLATE= \
-<?xml version='1.0' encoding='UTF8'?> \
+<?xml version="1.0" encoding="UTF8"?> \
 <job name="{0}" userid="{1}" community="{2}" time="{3}" jobURN="{4}" />
 
 #
