*** empty log message ***

--- a/astrogrid/jes/config/ASTROGRID_jesconfig.properties
+++ b/astrogrid/jes/config/ASTROGRID_jesconfig.properties
@@ -55,12 +55,12 @@ JOB.DATASOURCE=java:comp/env/jdbc/jes-datasource
 #
 # The table names for the job database
 #
-JOB.TABLENAME=JOB
-JOBSTEP.TABLENAME=JOBSTEP
-QUERY.TABLENAME=QUERY
-CATALOG.TABLENAME=CATALOG
-TABLE.TABLENAME=CATALOGTABLE
-SERVICE.TABLENAME=SERVICE
+JOB.TABLENAME=jes..job
+JOBSTEP.TABLENAME=jes..jobstep
+QUERY.TABLENAME=jes..query
+CATALOG.TABLENAME=jes..catalog
+TABLE.TABLENAME=jes..catalogtable
+SERVICE.TABLENAME=jes..service
 
 #
 # Submit Job Response Template
