change from ' to "

--- a/astrogrid/mySpace/conf/astrogrid/mySpace/MSManagerRequestResponse.properties
+++ b/astrogrid/mySpace/conf/astrogrid/mySpace/MSManagerRequestResponse.properties
@@ -1,5 +1,5 @@
 MYSPACEMANAGER_REQUEST= \
-<?xml version='1.0' encoding='UTF-8'?> \
+<?xml version="1.0" encoding="UTF-8"?> \
 <request> \
     <elements> \
         <userID>{0}</userID> \
@@ -18,7 +18,7 @@ MYSPACEMANAGER_REQUEST= \
 </request> \
 
 MYSPACEMANAGER_RESPONSE= \
-<?xml version='1.0' encoding='UTF-8'?> \
+<?xml version="1.0" encoding="UTF-8"?> \
 <results> \
     <status> \
         <status>{0}</status> \
@@ -41,7 +41,7 @@ MYSPACEMANAGER_RESPONSE= \
 </results>
 
 MYSPACEMANAGER_D_RESPONSE_HEAD= \
-<?xml version='1.0' encoding='UTF-8'?> \
+<?xml version="1.0" encoding="UTF-8"?> \
 <results> \
     <status> \
         <status>{0}</status> \
