*** empty log message ***

--- a/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
@@ -87,7 +87,7 @@ MYSPACE.FACTORY_KEY=org.astrogrid.datacenter.impl.MySpaceFactoryImpl
 # can be created (e.g. for the purposes of holding a votable to be ftp'd to MySpace).
 # The format is operating system dependent and can be a relative- or a fully-
 # qualified path.
-MYSPACE.CACHE_DIRECTORY=tmp
+MYSPACE.CACHE_DIRECTORY=/tmp
 
 #
 # This is the URL for the MySpace facility closest and most convenient
@@ -99,7 +99,7 @@ MYSPACE.MANAGER.URL=http://hydra.star.le.ac.uk:8080/axis/services/MySpaceManager
 # MySpace request template
 #
 MYSPACE.MANAGER.REQUEST_TEMPLATE= \
-<?xml version='1.0' encoding='UTF-8'?> \
+<?xml version="1.0" encoding="UTF-8"?> \
 <request> \
     <elements> \
         <userID>{0}</userID> \
