pre - refactoring (to improve SQL syntax processing)

--- a/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
@@ -25,11 +25,11 @@
 #
 # Note Z style messages (e.g. AGDTCZ00001) are included here for documentary purposes only.
 #
-AGDTCZ00001=AGJESZ00001:DatasetAgent: Could not read my configuration file {0}
-AGDTCZ00002=AGJESZ00002:DatasetAgent: Not initialized. Perhaps my configuration file is missing.
-AGDTCZ00003=AGJESZ00003:Message: Message key is null.
-AGDTCZ00004=AGJESZ00004:Message: Message pattern or inserts are invalid
-AGDTCZ00005=AGJESZ00005:Message: Message not found in ResourceBundle
+AGDTCZ00001=AGDTCZ00001:DatasetAgent: Could not read my configuration file {0}
+AGDTCZ00002=AGDTCZ00002:DatasetAgent: Not initialized. Perhaps my configuration file is missing.
+AGDTCZ00003=AGDTCZ00003:Message: Message key is null.
+AGDTCZ00004=AGDTCZ00004:Message: Message pattern or inserts are invalid
+AGDTCZ00005=AGDTCZ00005:Message: Message not found in ResourceBundle
 
 AGDTCE00030=:DatasetAgent: Failed to parse Job Request.
 AGDTCE00040=:DatasetAgent: Query ultimately failed. See previous messages.
@@ -68,4 +68,9 @@ AGDTCE00250=:Return: Could not create SQL for Return.
 
 AGDTCE00300=:Allocation: An error was returned from MySpaceManager. Status: {0}. Details: {1}
 AGDTCE00310=:Allocation: Error when invoking MySpaceManager.
-AGDTCEOO32O=:Allocation: Failed to parse response document returned from MySpaceManager.
+AGDTCE00320=:Allocation: Failed to parse response document returned from MySpaceManager.
+
+AGDTCE00400=:Operation: Unsupported SQL operaton [{0}] encountered in query.
+AGDTCE00410=:Operation: Could not create Operation from element.
+
+AGDTCE00420=:Catalog: Could not create Catalog from element.
