--- a/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datasetconfig.properties
@@ -105,7 +105,7 @@ MYSPACE.MANAGER.REQUEST_TEMPLATE= \
         <userID>{0}</userID> \
         <communityID>{1}</communityID> \
         <jobID>{2}</jobID> \
-        <fileLocation>{3}</fileLocation> \
+        <serverFileName>{3}</serverFileName> \
     </elements> \
 </request>
 
@@ -116,7 +116,7 @@ MYSPACE.MANAGER.REQUEST_TEMPLATE= \
 #
 JOB.FACTORY=org.astrogrid.datacenter.impl.JobFactoryImpl
 JOB.DATASOURCE=java:comp/env/jdbc/job-datasource
-JOB.TABLENAME=JOB
+JOB.TABLENAME=job..job
 
 
 #
