*** empty log message ***

--- a/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
+++ b/astrogrid/datacenter/config/ASTROGRID_datacentermessages.properties
@@ -74,3 +74,5 @@ AGDTCE00400=:Operation: Unsupported SQL operaton [{0}] encountered in query.
 AGDTCE00410=:Operation: Could not create Operation from element.
 
 AGDTCE00420=:Catalog: Could not create Catalog from element.
+AGDTCE00430=:Field: Unknown field type [{0}] encountered.
+AGDTCE00440=:Table: Could not create Table from element.
